fixed fullscreen button being invisible in chrome

--- a/gallery/styles/gallery.css
+++ b/gallery/styles/gallery.css
@@ -99,6 +99,7 @@
 	width: 100%; 
 	height: 30px; 
 	margin: 0px;
+	display: inline-block; 
 	
 	background-color: rgb(16, 16, 16); 
 	opacity: 1; 
@@ -163,7 +164,7 @@
 .gallery-toggle-fullscreen {
 	width: 16px; 
 	height: 16px;  
-	display: block;  
+	display: block; 
 	
 	margin-left: auto;
 	margin-right: auto;
